Finish revising manuscript

--- a/writing/Revision_Clean/plos_ms_revision.tex
+++ b/writing/Revision_Clean/plos_ms_revision.tex
@@ -159,7 +159,7 @@
 % Please capitalize all terms in the title except conjunctions, prepositions, and articles.
 \begin{flushleft}
 {\Large
-\textbf\newline{The formation of social conventions in real-time environments}
+\textbf\newline{ASDF formation of social conventions in real-time environments}
 }
 \newline
 % Insert author names, affiliations and corresponding author email (do not include titles, positions, or degrees).
@@ -188,12 +188,12 @@ Robert L. Goldstone\textsuperscript{2},
 \end{flushleft}
 % Please keep the abstract below 300 words
 \section*{Abstract}
-Why are some behaviors governed by strong social conventions while others are not? We experimentally investigate two factors contributing to the formation of conventions in a game of impure coordination: the continuity of interaction within each round of play (simultaneous vs. dynamic) and the stakes of the interaction (high vs. low differences between payoffs). To maximize efficiency and fairness in this game, players must coordinate on one of two equally advantageous equilibria. In agreement with other studies manipulating continuity of interaction, we find that players who were allowed to interact continuously within rounds achieved outcomes with greater efficiency and fairness than players who were forced to make simultaneous decisions. However, the stability of equilibria in the real-time condition varied systematically and dramatically with stakes: players converged on more stable patterns of behavior when stakes are high. To account for this result, we present a novel analysis of the dynamics of continuous interaction and signaling within rounds. We discuss this previously unconsidered interaction between within-trial and across-trial dynamics as a form of social canalization. When stakes are low in a real-time environment, players can satisfactorily coordinate `on the fly,' but when stakes are high there is increased pressure to establish and adhere to shared expectations that persist across rounds.
+Why are some behaviors governed by strong social conventions while others are not? We experimentally investigate two factors contributing to the formation of conventions in a game of impure coordination: the continuity of interaction within each round of play (simultaneous vs. real-time) and the stakes of the interaction (high vs. low differences between payoffs). To maximize efficiency and fairness in this game, players must coordinate on one of two equally advantageous equilibria. In agreement with other studies manipulating continuity of interaction, we find that players who were allowed to interact continuously within rounds achieved outcomes with greater efficiency and fairness than players who were forced to make simultaneous decisions. However, the stability of equilibria in the real-time condition varied systematically and dramatically with stakes: players converged on more stable patterns of behavior when stakes are high. To account for this result, we present a novel analysis of the dynamics of continuous interaction and signaling within rounds. We discuss this previously unconsidered interaction between within-trial and across-trial dynamics as a form of social canalization. When stakes are low in a real-time environment, players can satisfactorily coordinate `on the fly,' but when stakes are high there is increased pressure to establish and adhere to shared expectations that persist across rounds.
 
 \linenumbers
 
 \section*{Introduction}
-Many everyday activities are governed by strong societal conventions: the side of the road we drive on, the meaning of ``red'' and ``green'' on traffic lights, the currency we use to pay for our coffee, and the way we greet the cashier \cite{GarrodDoherty94_GroupConventionsLinguistics, CaldwellSmith12_Conventions, CentolaBaronchelli15_ConventionEmergence}. These are all \emph{self-sustaining}, in the sense that we will continue to conform to the convention as long as we expect others to, and also \emph{arbitrary}, in the sense that at least one alternative regularity exists and would be equally acceptable as long as everyone coordinated on it \cite{Lewis69_Convention}.\footnote{Some of these behaviors have also come to be regulated by the \emph{law}, but this does not undermine their status as conventions. If we expected everyone to drive on the left, the cost of driving on the right (and crashing) would be much greater than the cost of following the convention (and breaking the law).} 
+Many everyday activities are governed by strong societal conventions: the side of the road we drive on, the meaning of ``red'' and ``green'' on traffic lights, the currency we use to pay for our coffee, and the way we greet the cashier \cite{ClarkWilkesGibbs86_ReferringCollaborative, GarrodAnderson87_SayingWhatYouMean, CaldwellSmith12_Conventions, CentolaBaronchelli15_ConventionEmergence}. These are all \emph{self-sustaining}, in the sense that we will continue to conform to the convention as long as we expect others to, and also \emph{arbitrary}, in the sense that at least one alternative regularity exists and would be equally acceptable as long as everyone coordinated on it \cite{Lewis69_Convention}.\footnote{Some of these behaviors have also come to be regulated by the \emph{law}, but this does not undermine their status as conventions. If we expected everyone to drive on the left, the cost of driving on the right (and crashing) would be much greater than the cost of following the convention (and breaking the law).} 
 
 Equally interesting, however, are the many activities not governed by conventions. Consider a pedestrian deciding what path to take through a busy marketplace. There is still a coordination problem to solve -- we do not want to keep running into one another -- but we solve it `on the fly' every time and there is no mutual expectation of conformity. The spatiotemporal patterns formed by pedestrians are driven more by reactive or subconscious factors than strategic or conventional considerations \cite{HelbingBuznaWerner05_PedestrianCrowdDynamics}. Similarly, there are no societal conventions governing who gets the last bite of food at a meal or what kind of music to put on afterward. 
 
@@ -222,13 +222,13 @@ The distinction between these different decision-making environments is not only
 \label{ex}
 \end{figure}
 
-These results suggest that introducing real-time interactions into a game of (impure) coordination such as the \emph{Battle of the Exes} may substantially change the conventionalization process, although it is not clear \emph{a priori} how it would interact with stakes and whether it would help or hinder. Many real-world activities often used as examples of convention formation -- driving, walking, greeting one another -- take place in real-time environments, yet empirical studies of conventionalization have exclusively relied on traditional, discrete-time environments. We directly compare these two environments in our task by using a navigational interface: each player controls an avatar, and earns payoffs by navigating their avatar to one of two target locations (see Fig. \ref{ex}). In the \emph{dynamic}, real-time condition, players move at a nearly continuous pace and may change their heading at any point in time. In the \emph{simultaneous}, discrete-time condition, players simultaneously choose which target they want to go to at the beginning of the round, then have no control as their avatars go there, thus replicating the traditional paradigm with the navigational interface.
+These results suggest that introducing real-time interactions into a game of (impure) coordination such as the \emph{Battle of the Exes} may substantially change the conventionalization process, although it is not clear \emph{a priori} how it would interact with stakes and whether it would help or hinder. Many real-world activities often used as examples of convention formation -- driving, walking, greeting one another -- take place in real-time environments, yet empirical studies of conventionalization have exclusively relied on traditional, discrete-time environments. We directly compare these two environments in our task by using a navigational interface: each player controls an avatar, and earns payoffs by navigating their avatar to one of two target locations (see Fig. \ref{ex}). In the \emph{dynamic}, real-time condition, players move at a nearly continuous pace and may change their heading at any point in time. In the \emph{ballistic}, discrete-time condition, players simultaneously choose which target they want to go to at the beginning of the round, then have no control as their avatars go there, thus replicating the traditional paradigm with the navigational interface.
 
 If a game is repeatedly played across multiple rounds, and each round incorporates real-time play culminating in the awarding of a payoff, then within-round and across-round player interactions can potentially shape each other. One hypothesis is that learning across rounds makes within-round coordination more efficiently achieved, as players adopt conventions learned not only from their general experience with a community \cite{JacksonXing14_CultureDependentStrategies} but also from within the immediate, local interaction \cite{FreyGoldstone13_CyclicGameDynamics, GarrodAnderson87_SayingWhatYouMean, BrennanClark96_ConceptualPactsConversation}. Another hypothesis, not mutually exclusive to the first, is that within-round conflict incentivizes the creation of conventions across rounds. Players experiencing conflict in the real-time interactions of a particular round of play may strategically create coordination patterns to avoid repeating these failures to efficiently coordinate in future rounds.  Both of these patterns of influence across temporal scales were explored in a novel game that rewards dyads that can coordinate their game play across trials to avoid conflict within single trials.
 
-On a theoretical basis, we are interested in the ``three levels of priority made necessary by social contract theory'' proposed by game theorist Ken Binmore: efficiency, fairness, and stability \cite{Binmore05_NaturalJustice}. Given the increased capacity for signaling and immediate reaction, it is perhaps unsurprising that real-time environments lead to more efficient solutions when everyone benefits equally. It is less obvious how a pair of players will implicitly negotiate the power dynamic induced by the payoff structure of impure coordination games. 
+On a theoretical basis, we are interested in the ``three levels of priority made necessary by social contract theory'' proposed by game theorist Ken Binmore: efficiency, fairness, and stability \cite{Binmore05_NaturalJustice}. Given the increased capacity for signaling and immediate reaction, we expect that the dynamic conditions of our coordination game will lead to more efficient outcomes than the ballistic conditions, regardless of the stakes. It is less obvious how a pair of players will implicitly negotiate the within-round unfairness induced by the asymmetric payoff structure, or how our two manipulations will affect the stability of the conventionalization process.
 
-Our results indicate that when all other properties are held constant, allowing interactions to take place in a real-time environment solves many of the inefficiencies and inequalities that have frequently been observed, but it does not necessarily support stable equilibria. To explain the strong interaction between payoff discrepancy and real-time environments on stability, we use the rich millisecond-resolution data provided by our real-time paradigm to illuminate the  relationship between micro-level social interactions within rounds and macro-level outcomes across rounds. 
+%Our results indicate that when all other properties are held constant, allowing interactions to take place in a real-time environment solves many of the inefficiencies and inequalities that have frequently been observed, but it does not necessarily support stable equilibria. To explain the strong interaction between payoff discrepancy and real-time environments on stability, we use the rich millisecond-resolution data provided by our real-time paradigm to illuminate the  relationship between micro-level social interactions within rounds and macro-level outcomes across rounds. 
 
 % You may title this section "Methods" or "Models". 
 % "Models" is not a valid title for PLoS ONE authors. However, PLoS ONE
@@ -258,7 +258,7 @@ The rules governing assignment of payoffs were as follows: around each target (r
 
 \subsection*{Efficiency and Fairness} Our first major result concerns the efficiency and fairness of strategic interaction. Efficiency is defined as the sum $\rho_1 + \rho_2$, where $\rho_i$ is player $i$'s total payoff. It quantifies the total amount of money the players were collectively able to earn. We divide by the total amount it was \emph{possible} to earn in order to normalize all efficiency scores to the $[0,1]$ interval and compare across conditions with different payoff structures. If a pair of players achieves the maximum efficiency of $1$, they are optimally efficient. Note that there are many different sets of outcomes that achieve the same level of efficiency, some more fair than others.
 
-To distinguish among these different outcomes, we introduce a measure of fairness, defined as the normalized payoff ratio $$\text{Fairness} = \frac{\min(\rho_1', \rho_2')}{\max(\rho_1', \rho_2')}$$ where $\rho_i'$ is the number of rounds that player $i$ earned the higher payoff. This normalization maps the fairness of all conditions to the same $[0,1]$ interval. If one player gets the higher payoff every round, this measure of fairness will be zero; if the players finish the experiment with an equal number of times of earning the high payoff, it will be one. 
+To distinguish among these different outcomes, we introduce a measure of fairness, defined as the normalized payoff ratio $$\text{Fairness} = \frac{\min(\rho_1', \rho_2')}{\max(\rho_1', \rho_2')}$$ where $\rho_i'$ is the number of rounds that player $i$ earned the higher payoff. This normalization maps the fairness of all conditions to the same $[0,1]$ interval. If one player gets the higher payoff every round, this measure of fairness will be zero; if the players finish the experiment with an equal number of times of earning the high payoff, it will be one\footnote{All of our measures are defined at the level of the dyad, and this is the unit of observation used in all of the following analyses}. 
 
 Given that the four distributions of fairness scores featured varying degrees of bimodality and the efficiency scores were similarly non-Gaussian (\nameref{S2_Fig}), we used non-parametric techniques to test the null hypothesis of stochastic equality. For efficiency, a Kruskal-Wallis $H$-test showed a significant difference in the mean ranks of the four different distributions ($H(3) = 30.07, p < .0001$). Post-hoc Mann-Whitney $U$-tests at the Bonferroni corrected $\alpha$ value of .05/4 = .0125 showed that the dynamic conditions, ($M = 0.84, M = 0.84)$, are significantly more efficient than ballistic conditions ($M = 0.69, M = 0.70)$ both within the `high' condition ($U = 1056$, $n_1 = 56$, $n_2 = 69$, $p < .0001$) and the `low' condition ($U = 735$, $n_1 = 52$, $n_2 = 46$, $p < .001$). There was no main effect associated with the payoff manipulation, either at the `dynamic' or `ballistic' levels ($p = .32$ and $p = .47$, respectively; see Fig. \ref{Fig2}a). Given that ties are the sole mechanism through which efficiency can be lowered in the game, a more specific restatement of this result is that ties are significantly more frequent in the ballistic conditions than the dynamic conditions.
 
@@ -315,7 +315,11 @@ Our game also demonstrates a social analog of biological canalization.  When a d
 
 It is possible to unify these two apparently contradictory interactions across temporal scales.  Sometimes, as in our high payoff discrepancy condition, real-time dynamics facilitate the creation of conventions to avoid inefficient and repetitious coordination negotiations on every round.  Other times, as in our low discrepancy condition, real-time dynamics can be employed to prevent ties and promote coordination without requiring overarching conventions.  Our experiment identifies \emph{stakes} as one factor that governs whether real-time interactions will promote or obviate social convention formation.  The same within-round interaction that establishes across-round conventions when the stakes are relatively high provides an acceptable low-effort alternative to establishing conventions when the stakes relatively low.  Other factors that will likely affect whether the shorter temporal dynamic promotes or impedes the longer dynamical adjustment include the difficulty involved in establishing conventions, the number of rounds of iterated play, and the existing social structures for promoting coordination.
 
-Our efficiency results are consistent with those found by Oprea and Friedman in the Prisoner's Dilemma \cite{FriedmanOprea12_ContinuousDilemma}: just as players in their real-time condition spent less time in the inefficient mutual defection profile than players in the discrete-time conditions, players in our continuous-time condition ended fewer rounds with inefficient failures of coordination. It is worth noting that our task differs from the real-time game used by Oprea and colleagues in three ways, beyond the payoff matrix. First, instead of one continuous period of game play, our \emph{dynamic} condition uses a hierarchical design. Participants play many rounds, and each round takes place in real time. This more closely resembles a continuous-time version of the Hawk-Dove game used by Oprea and colleagues to test the predictions of (continuous) replicator dynamics  \cite{OpreaHenwoodFriedman11_HawksDoves}. This game used 20 rounds of 2-minute interactions. Second, Friedman and Oprea calculated payoffs by integrating over the whole time interval; in our task, only one payoff was given at the end of each round: payoffs were simply determined by the locations to which each player navigated their avatar. Third, Friedman and Oprea restricted player's action space to a toggle between ``Cooperate'' and ``Defect.'' In our experiment, participants could in principle choose any angle at any point in time, although in practice this large space collapsed to a choice between the two target locations.
+Our efficiency results are consistent with those found by Oprea and Friedman in the Prisoner's Dilemma \cite{FriedmanOprea12_ContinuousDilemma}: just as players in their real-time condition spent less time in the inefficient mutual defection profile than players in the discrete-time conditions, players in our continuous-time condition ended fewer rounds with inefficient failures of coordination. It is worth noting that our task differs from the real-time game used by Oprea and colleagues in three ways, beyond the payoff matrix. First, instead of one continuous period of game play, our dynamic condition uses a hierarchical design. Participants play many rounds, and each round takes place in real time. This more closely resembles a continuous-time version of the Hawk-Dove game used by Oprea and colleagues to test the predictions of (continuous) replicator dynamics  \cite{OpreaHenwoodFriedman11_HawksDoves}, which used 20 rounds of 2-minute interactions. Second, Friedman and Oprea calculated payoffs by integrating over the whole time interval; in our task, only one payoff was given at the end of each round: payoffs were determined by the avatars' final destinations. Third, Friedman and Oprea restricted player's action space to a toggle between ``Cooperate'' and ``Defect.'' In our experiment, participants could in principle choose any angle at any point in time, although in practice this large space collapsed to a choice between the two target locations.
+
+While participants in our game interacted with the same partner on every round, many real-life activities involve interacting with strangers drawn from a larger population. When we pass a car on the road, we may never have interacted with that particular driver before, but we each adhere to our mutual convention of driving on the right-hand side and successfully solve the coordination problem. How do conventions generalize to larger populations \cite{GarrodDoherty94_GroupConventionsLinguistics, WeberCamerer03_CulturalConflict}, and how do they shift over multiple generations \cite{SchotterSopher03}? Our experiment cannot answer this question; we restricted ourselves to the simpler case of an isolated dyad for more precision in our manipulations. Persistent partners are more likely to produce coordination, so this is a good place to start studying the emergence of coordinated play. Additionally, it's not clear how the conventions we studied would fare in random matching: turn-taking requires some memory of the previous round's behavior to determine the appropriate action on the current round.  
+
+More broadly, though, the issue of generalization has been well-studied in the literature: Garrod and Doherty, for instance, explicitly manipulated whether participants in a communication game stay with the same partners or switch each round. They find that in the long-run, the latter condition creates stronger conventions \cite{GarrodDoherty94_GroupConventionsLinguistics}.  This result is consistent with our theory of canalization: re-forming dyads on each round ratchets up the evolutionary pressure to establish and adhere to a social convention, similar to our 1 vs. 4 payoff condition. 
 
 The framework introduced in this paper may be fruitful in exploring other conventionalized behaviors in cognitive science. One area of particular interest is language, where some communication goals are handled `on the fly' by pragmatic inference and others are encoded in the lexicon \cite{Grice75_LogicConversation, GarrodDoherty94_GroupConventionsLinguistics}. The factors that determined this division and continue to shape it remain an open question. Children face the same problem in language learning; they must infer which utterances they should encode and reproduce as linguistic conventions and which should be left to pragmatics. A substantial literature in social psychology documents the cultural norms that shape our values and attitudes toward others \cite{Bicchieri05_DynamicsSocialNorms}, and our results suggest a high-stakes, real-time pathway through which new norms may emerge. Our analysis also contributes to the broader groundswell of interest in cognitive science \cite{SpiveyDale06, KoopJohnson11, Beer00}, economics \cite{OpreaCharnessFriedman14_ContinuousTime, FriedmanOprea12_ContinuousDilemma}, and biology \cite{vanDoornRiebliTaborsky14_CoactionReciprocityContinuousTime} in exploring the trajectory of decision processes as they unfold in real time. 
 
